--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     - ./:/application
     - /php-fpm/php-ini-overrides.ini:/etc/php/7.2/fpm/conf.d/99-overrides.ini
     networks:
-      - net-prueba
+      - net_prueba
     depends_on:
       - reverseproxy
   db:
@@ -24,7 +24,7 @@ services:
     # volumes:
     #   - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
-      - net-prueba
+      - bolsa_trabajo_front_net-prueba
         phpmyadmin:
     build: phpmyadmin
     container_name: phpmyadmin
@@ -37,7 +37,7 @@ services:
     environment:
       - VIRTUAL_HOST=phpmyadmin.com
     networks:
-      - net-prueba
+      -  net_prueba
   laravel:
     image: nginx:alpine
     container_name: nginxLaravel
@@ -46,7 +46,7 @@ services:
       - .:/application
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - net-prueba
+      -  net_prueba
     depends_on:
       - angular
       - db
