--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,6 @@
 version: '3.8'
 services:
   
-  # webserver:
-  #   image: nginx:alpine
-  #   container_name: webserver
-  #   working_dir: /application
-  #   volumes:
-  #     - .:/application
-  #     - ./back/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-  #   networks:
-  #     - net-prueba 
-  
   php-fpm:
     build: ./
     container_name: php-fpm
@@ -39,8 +29,8 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: job_bank
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: Chubaca2020
+      MYSQL_PASSWORD: Chubaca2020
       MYSQL_USER: admin      
     # volumes:
     #   - ./docker-compose/mysql:/docker-entrypoint-initdb.d
