--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,27 @@
-version: '3.8'
+version: "3.8"
 services:
-  
   php-fpm:
     build: ./
     container_name: php-fpm
     working_dir: /app
     volumes:
-    - ./:/app
+      - ./:/app
     networks:
       - net_prueba
     ports:
       - "3021:8000"
-  
+
   phpmyadmin:
     build: ./phpmyadmin
     container_name: phpmyadmin
     restart: always
-    depends_on: 
+    depends_on:
       - db
-    environment: 
-      - VIRTUAL_HOST=phpmyadmin.com  
+    environment:
+      - VIRTUAL_HOST=phpmyadmin.com
     networks:
-      - net_prueba   
-    
+      - net_prueba
+
   db:
     image: mariadb:10.5.8
     container_name: database
@@ -31,13 +30,11 @@ services:
       MYSQL_DATABASE: job_bank
       MYSQL_ROOT_PASSWORD: Chubaca2020
       MYSQL_PASSWORD: Chubaca2020
-      MYSQL_USER: admin      
+      MYSQL_USER: admin
     # volumes:
     #   - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
       - net_prueba
-
 networks:
   net_prueba:
-    name: net_prueba
-    driver: bridge
+      external: true
