--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PYc1fvTa1HDTUtG/wFXKshayzH7s8DUbS/7jhU6KsyY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=job_bank
+DB_USERNAME=admin
+DB_PASSWORD=Chubaca2020
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
