--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     },
     "autoload": {
         "psr-4": {
-            "app\\": "app/",
+            "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
