--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:PYc1fvTa1HDTUtG/wFXKshayzH7s8DUbS/7jhU6KsyY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
