--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "laravel/framework": "^8.12",
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2"
+        "laravel/ui": "^3.2",
+        "ext-pdo_sqlite": "*",
+        "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
